--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,16 +12,52 @@
 </head>
 
 <body>
-  <div>
+  <nav class="top-bar" data-topbar>
+  <ul class="title-area">
+    <li class="name">
+      <h1><a href="#">Cobrastyle</a></h1>
+    </li>
+  </ul>
+
+  <section class="top-bar-section">
+    <!-- Right Nav Section -->
+    <ul class="right">
+      <li class="active"><a href="#"><%= link_to "My Shopping Cart", root_url %></a></li>
     <% if user_signed_in? %>
-      Logged in as <strong><%= current_user.email %></strong>.
-      <%= link_to 'Edit profile', edit_user_registration_path %> |
-      <%= link_to "Logout", destroy_user_session_path, method: :delete %>
+    <li class="has-dropdown">
+      <a href="#">Logged in as <strong><%= current_user.email %></strong>.</a>
+        <ul class="dropdown">
+          <li><a href="#"><%= link_to 'Edit profile', edit_user_registration_path %></a></li>
+          <li><a href="#"><%= link_to "Logout", destroy_user_session_path, method: :delete %></a></li>
+        </ul>
+    </li>
     <% else %>
-      <%= link_to "Sign up", new_user_registration_path %> |
-      <%= link_to "Login", new_user_session_path %>
+    <li class="has-dropdown">
+      <a href="#">Current User Not Logged In</a>
+      <ul class="dropdown">
+          <li><a href="#"><%= link_to "Login", new_user_session_path %></a></li>
+          <li><a href="#"><%= link_to "Sign up", new_user_registration_path %></a></li>
+      </ul>
+    </li>
     <% end %>
-  </div>
+    </ul>
+
+    <!-- Left Nav Section -->
+    <ul class="left">
+      <li><a href="#"><%= link_to "Look Book", root_url %></a></li>
+      <li class="has-dropdown">
+        <a href="#">Shop</a>
+        <ul class="dropdown">
+          <li><a href="#"><%= link_to "Leggings", root_url %></a></li>
+          <li><a href="#"><%= link_to "T Shirts", root_url %></a></li>
+          <li><a href="#"><%= link_to "Sneakers", root_url %></a></li>
+          <li><a href="#"><%= link_to "Jackets", root_url %></a></li>
+          <li><a href="#"><%= link_to "Sweaters", root_url %></a></li>
+        </ul>
+      </li>
+    </ul>
+  </section>
+</nav>
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
   <%= yield %>
