Added working product show view, route, and controller method.

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,5 +1,5 @@
 <% @products.each do |product| %>
-<div><%= product.name %></div>
+<div><%= link_to product.name, product %></div>
 <div><%= product.description %></div>
 <div><%= product.price %></div>
 <div><%= image_tag product.images %></div>
