--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,4 +1,5 @@
 <div><%= image_tag @product.images %></div>
 <div><%= @product.name %></div>
-<div><%= @product.price %></div>
+<div><%= number_to_currency(@product.price) %></div>
 <div><%= @product.description %></div>
+<%= button_to "Add to Cart", new_line_item_path(product_id: @product, user_id: current_user) %>
