--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -2,4 +2,5 @@
 <div><%= @product.name %></div>
 <div><%= number_to_currency(@product.price) %></div>
 <div><%= @product.description %></div>
-<%= button_to "Add to Cart", new_line_item_path(product_id: @product, user_id: current_user) %>
+<%= button_to "Add to Cart", new_line_item_path(product_id: @product, user_id: current_user), class: "button" %>
+
