Create order controller with create method, update relationships on line item model, add in cart scope to line item model, update line items index model with in cart scope. Adds working checkout button to cart.

--- a/app/views/line_items/index.html.erb
+++ b/app/views/line_items/index.html.erb
@@ -3,3 +3,5 @@ Items in your cart:
 <div><%= item.product_id%></div>
 <div><%= button_to "Remove From Cart", remove_item_from_cart_path(line_item_id: item), method: :delete, class: "button tiny" %> </div>
 <% end %>
+
+<%= button_to "Checkout", new_order_path, class: "button" %>
